# flash_cs

./: .cursor-rules.yaml  .gitignore  anki_sync.py  cs_flash_pipeline.py  diagram_generator.py  docker-compose.yml  embedder.py  flashcard_evaluator.py  flashcard_generator.py  main.py  pdf_ingestor.py  pyproject.toml  shell.nix  text_chunker.py
