[project]
name = "flash-cs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb-client>=1.0.12",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.19",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pypdf>=5.6.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
]
